[tool.poetry]
name = "fiji-arnheim"
version = "0.1.3"
readme = "README.md"
homepage = "https://github.com/jhnnsrs/fiji-arnheim"
description = "Fiji with Arnheim Client Integrated"
packages = [{include = "fiji_arnheim"}]
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grunnlag = "^0.2.18"
bergen= "^0.3.95"
pyimagej = "^1.0.0"

[tool.poetry.scripts]
fiji-arnheim = "fiji_arnheim.run:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
